Fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,7 +405,7 @@ a {
 /* Background Elements */
 .bg-element {
   position: absolute;
-  z-index: 1;
+  /* z-index: 1; */
   opacity: 0.1;
 }
 
@@ -434,7 +434,7 @@ a {
   width: 60%;
   height: 100%;
   opacity: 0.05;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .bg-lines::before,
@@ -1350,7 +1350,7 @@ h6 {
   width: 70%;
   height: 100%;
   opacity: 0.05;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .testimonial-bg-lines::before,
@@ -1572,7 +1572,7 @@ h6 {
 /* Background Elements (Same as Header) */
 .footer-section .bg-element {
   position: absolute;
-  z-index: 10;
+  /* z-index: 10; */
   opacity: 0.1;
 }
 
@@ -1601,7 +1601,7 @@ h6 {
   width: 60%;
   height: 100%;
   opacity: 0.05;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 .footer-section .bg-lines::before,
